Fix z-index

--- a/assets/scss/blocks/_tabs.scss
+++ b/assets/scss/blocks/_tabs.scss
@@ -2,6 +2,7 @@
   background: #f1f3f8;
   padding: 100px 0;
   position: relative;
+  z-index: 2;
 
   &::after {
     position: absolute;
@@ -14,6 +15,7 @@
     background-size: contain;
     width: 500px;
     height: 400px;
+    z-index: -1;
   }
 }
 
